--- a/index.html
+++ b/index.html
@@ -6,39 +6,47 @@
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
+    <!--Head of the Page-->
     <header>
       <nav>
-        <h1>Broadway Design</h1>
+        <h1 id="home">Broadway Design</h1>
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Work</li>
-          <li>Team</li>
-          <li>Contact</li>
+          <li><a href="home">Home</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="work">Work</a></li>
+          <li><a href="team">Team</a></li>
+          <li><a href="contact">Contact</a></li>
         </ul>
       </nav>
     </header>
-    <h2>Our Process</h2>
-    <img src="" alt="">
-    <h3></h3>
-    <p></p>
-    <img src="" alt="">
-    <h3></h3>
-    <p></p>
-    <img src="" alt="">
-    <h3></h3>
-    <p></p>
-    <h3></h3>
-    <h3></h3>
-    <p></p>
-    <h3></h3>
-    <p></p>
-    <h3></h3>
-    <p></p>
-    <p></p>
-    <p></p>
+    <!--Top of Page-->
+    <h2 id="about">Our Process</h2>
+    <!--Identity-->
+    <img src="./resources/images/identify.svg" alt="Identify Logo">
+    <h3>Identity</h3>
+    <p>We focus on the most important details.</p>
+    <!--Understand-->
+    <img src="./resources/images/understand.svg" alt="Understand Logo">
+    <h3>Understand</h3>
+    <p>We study our projects inside and out.</p>
+    <!--Execute-->
+    <img src="./resources/images/execute.svg" alt="Execute Logo">
+    <h3>Execute</h3>
+    <p>We put everything we have into our work.</p>
+    <!--More Information-->
+    <h3>Designed in New York</h3>
+    <h3 id="work">Portfolio</h3>
+    <p>Coming Soon</p>
+    <h3 id="team">Team</h3>
+    <p>We're Hiring!</p>
+    <!--Contact Information-->
+    <h3>Contact</h3>
+    <p>Phone: (555)-555-5555</p>
+    <p>Email: Test@example.com</p>
+    <p>Twitter: @Test</p>
     <footer>
-      <p></p>
+      <p id="contact">&copy; Broadway 2016 <a href="#home">Home </a><a href="about">About </a><a href="work">Work</a>
+        <a href="team">Team </a><a href="contact">Contact</a></p>
     </footer>
 
   </body>
