--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <nav>
         <h1 id="home">Broadway Design</h1>
         <ul>
-          <li><a href="home">Home</a></li>
-          <li><a href="about">About</a></li>
-          <li><a href="work">Work</a></li>
-          <li><a href="team">Team</a></li>
-          <li><a href="contact">Contact</a></li>
+          <li><a href="home" class="list">Home</a></li>
+          <li><a href="about" class="list">About</a></li>
+          <li><a href="work" class="list">Work</a></li>
+          <li><a href="team" class="list">Team</a></li>
+          <li><a href="contact" class="list">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -23,16 +23,16 @@
     <h2 id="about">Our Process</h2>
     <!--Identity-->
     <img src="./resources/images/identify.svg" alt="Identify Logo">
-    <h3>Identity</h3>
-    <p>We focus on the most important details.</p>
+    <h3 class="content">Identity</h3>
+    <p class="detail">We focus on the most important details.</p>
     <!--Understand-->
     <img src="./resources/images/understand.svg" alt="Understand Logo">
-    <h3>Understand</h3>
-    <p>We study our projects inside and out.</p>
+    <h3 class="content">Understand</h3>
+    <p class="detail">We study our projects inside and out.</p>
     <!--Execute-->
     <img src="./resources/images/execute.svg" alt="Execute Logo">
-    <h3>Execute</h3>
-    <p>We put everything we have into our work.</p>
+    <h3 class="content">Execute</h3>
+    <p class="detail">We put everything we have into our work.</p>
     <!--More Information-->
     <h3>Designed in New York</h3>
     <h3 id="work">Portfolio</h3>
