--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h3 class="content">Execute</h3>
     <p class="detail">We put everything we have into our work.</p>
     <!--More Information-->
-    <h3>Designed in New York</h3>
+    <h3 id="york">Designed in New York</h3>
     <h3 id="work">Portfolio</h3>
     <p>Coming Soon</p>
     <h3 id="team">Team</h3>
@@ -45,8 +45,9 @@
     <p>Email: Test@example.com</p>
     <p>Twitter: @Test</p>
     <footer>
-      <p id="contact">&copy; Broadway 2016 <a href="#home">Home </a><a href="about">About </a><a href="work">Work</a>
-        <a href="team">Team </a><a href="contact">Contact</a></p>
+      <p id="contact" class="contact">&copy; Broadway 2016 <a href="#home" class="contact">Home </a>
+        <a href="about" class="contact">About </a><a href="work" class="contact">Work</a>
+        <a href="team" class="contact">Team </a><a href="contact" class="contact">Contact</a></p>
     </footer>
 
   </body>
